[package]
name = "tmp"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tmp"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
solana-program = "1.16.7"
# https://github.com/project-serum/anchor/tree/master/spl
anchor-spl = {version="0.26.0", features=["dex"]}
sha2 = "0.10.7"